--- a/.project
+++ b/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PoppinWebQA</name>
+	<name>PoppinDW</name>
 	<comment></comment>
-	<projects>
-	</projects>
+	<projects>poppinDW</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
